не работает передача имени родителя

--- a/tpl/main.html
+++ b/tpl/main.html
@@ -3,18 +3,18 @@
             <fieldset>
                 <div class="row-fluid">
                     <div class="span12">
-                        <legend>иерархическая структура</legend>
+                        <legend>structure tree</legend>
                     </div>
                     <div class="span12">
-                        <select class="input-xxlarge" name="select">
-                            <option value=" ">Выберите элемент...</option>
-                            <option value='root'>корневой элемент</option>
+                        <select class="input-xxlarge" name="parent">
+                            <option value=" ">Select parent element</option>
+                            <option value='root'>root element</option>
                             {{SELECT}}
                         </select>
                     </div>
                 </div>
                 <div class="span12">
-                    <input type="submit" class="btn" name="newElement" value="новый элемент">
+                    <input type="submit" class="btn" name="newElement" value="new element">
                 </div>
             </fieldset>
         </form>
