--- a/tpl/add.html
+++ b/tpl/add.html
@@ -2,7 +2,7 @@
     <fieldset>
         <div class="row-fluid">
             <div class="span12">
-                <legend>добавить элемент</legend>
+                <legend>add element</legend>
             </div>
 
             <div class="input-prepend">
@@ -11,13 +11,13 @@
                         <label class="control-label" for="nameElement"></label>
                         <div class="controls">
                             <div class="input-prepend">
-                                <span class="add-on">название элемента</span>
+                                <span class="add-on">element name</span>
                                 <input id="nameElement" name="nameElement" class="input-xxlarge" placeholder="" type="text">
                             </div>
                 </div>
                 <div class="span12">
                     <div class="control-group">
-                        <label class="control-label" for="discriptionElement">описание элемента</label>
+                        <label class="control-label" for="discriptionElement" value="">description of the item</label>
                         <div class="controls">
                             <textarea id="discriptionElement" name="discriptionElement"></textarea>
                         </div>
@@ -26,7 +26,7 @@
 
             </div>
             <div class="span12">
-                <input type="submit" class="btn" name="addElement" value="добавить элемент">
+                <input type="submit" class="btn" name="addElement" value="add element">
             </div>
 
         </div>
