--- a/tpl/add.html
+++ b/tpl/add.html
@@ -6,6 +6,14 @@
             </div>
 
             <div class="input-prepend">
+			    <div class="span12">
+                    <div class="control-group">
+                        <label class="control-label" for="discriptionElement" value="">description of the item</label>
+                        <div class="controls">
+                            <input id="parentElement" name="parentElement" readonly="true" disabled="true" value="{{parentElement}}">
+                        </div>
+                    </div>
+                </div>
                 <div class="span12">
                     <div class="control-group">
                         <label class="control-label" for="nameElement"></label>
