--- a/tpl/add.html
+++ b/tpl/add.html
@@ -5,32 +5,38 @@
                 <legend>add element</legend>
             </div>
 
-            <div class="input-prepend">
-			    <div class="span12">
-                    <div class="control-group">
-                        <label class="control-label" for="discriptionElement" value="">description of the item</label>
-                        <div class="controls">
-                            <input id="parentElement" name="parentElement" readonly="true" disabled="true" value="{{parentElement}}">
+            <div class="span12">
+                <div class="control-group">
+                    <label class="control-label" for="parentElement"></label>
+                    <div class="controls">
+                        <div class="input-prepend">
+                            <span class="add-on">name of the parent</span>
+                            <input id="parentElement" name="parentElement" readonly="true" class="input-xxlarge" placeholder="" type="text" value="{{parentElement}}">
                         </div>
                     </div>
                 </div>
-                <div class="span12">
-                    <div class="control-group">
-                        <label class="control-label" for="nameElement"></label>
-                        <div class="controls">
-                            <div class="input-prepend">
-                                <span class="add-on">element name</span>
-                                <input id="nameElement" name="nameElement" class="input-xxlarge" placeholder="" type="text">
-                            </div>
-                </div>
-                <div class="span12">
-                    <div class="control-group">
-                        <label class="control-label" for="discriptionElement" value="">description of the item</label>
-                        <div class="controls">
-                            <textarea id="discriptionElement" name="discriptionElement"></textarea>
+            </div>
+
+            <div class="span12">
+                <div class="control-group">
+                    <label class="control-label" for="nameElement"></label>
+                    <div class="controls">
+                        <div class="input-prepend">
+                            <span class="add-on">element name</span>
+                            <input id="nameElement" name="nameElement" class="input-xxlarge" placeholder="" type="text">
                         </div>
                     </div>
                 </div>
+            </div>
+
+            <div class="span12">
+                <div class="control-group">
+                    <label class="control-label" for="discriptionElement" value="">description of the item</label>
+                    <div class="controls">
+                        <textarea id="discriptionElement" name="discriptionElement"></textarea>
+                    </div>
+                </div>
+            </div>
 
             </div>
             <div class="span12">
